--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material/elevation": "^0.36.1",
     "vue": "^2.5.2",
+    "vue-lottie": "^0.2.1",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1"
   },
