--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@material/elevation": "^0.36.1",
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-fullpage": "^2.0.5",
+    "vue-fullpage.js": "0.0.5",
     "vue-lottie": "^0.2.1",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1"
