--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-fullpage.js": "0.0.5",
     "vue-lottie": "^0.2.1",
     "vue-material": "^1.0.0-beta-10.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
